tests/snapshots/compiler_error_fixtures/adversarial__common_dev_mistakes__UnknownIdentifierTypo.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/adversarial/common_dev_mistakes/UnknownIdentifierTypo.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `prnit`.

  examples/compiler_errors/adversarial/common_dev_mistakes/UnknownIdentifierTypo.flx:6:9
  |
6 |         prnit("x")
  |         ^^^^^

Hint:
  Define it first: let prnit = ...;
== stdout ==
<not executed>
